<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:text="@string/p_name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="130dp"
        android:text="@string/p_qty"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="220dp"
        android:text="@string/p_rate"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="182dp"
        android:text="@string/total_amount"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/icalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="67dp"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/ireset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/icalc"
        android:layout_marginEnd="80dp"
        android:text="@string/reset" />

    <Spinner
        android:id="@+id/iname"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginEnd="12dp"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/iqty"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/iname"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:hint="Quantity"
        android:inputType="number"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/irate"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/iname"
        android:layout_alignTop="@+id/textView3"
        android:hint="@string/rate"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itotal_amt"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/iname"
        android:layout_alignTop="@+id/textView4"
        android:hint="@string/total_amount"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>